force-app/main/default/objects/KimbleOne__DeliveryElementSnapshot__c/KimbleOne__DeliveryElementSnapshot__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Element Snapshot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Delivery Element Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Element Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>