force-app/main/default/objects/KimbleOne__DeliveryElementSnapshot__c/fields/KimbleOne__ContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractCost__c</fullName>
    <label>Contract Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>