force-app/main/default/objects/KimbleOne__DeliveryElementSnapshot__c/fields/KimbleOne__ContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMargin__c</fullName>
    <label>Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>