force-app/main/default/objects/KimbleOne__DeliveryElementSnapshot__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Delivery Element Snapshots</relationshipLabel>
    <relationshipName>DeliveryElementSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>