force-app/main/default/objects/KimbleOne__DeliveryElementSnapshot__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DeliveryGroup__c</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__SnapshotDate__c</columns>
    <columns>KimbleOne__BaselineContractCost__c</columns>
    <columns>KimbleOne__BaselineContractRevenue__c</columns>
    <columns>KimbleOne__ContractCost__c</columns>
    <columns>KimbleOne__ContractRevenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>